# rust-template

./: .editorconfig  .editorconfig.liquid  .gitignore  .gitignore.liquid  .prettierignore.liquid  CHANGELOG.md.liquid  CONTRIBUTING.md  CONTRIBUTING.md.liquid  Cargo.toml  Cargo.toml.liquid  Embed.toml  LICENSE-MIT.liquid  README.md.liquid  build.rs.liquid  cargo-generate.toml  clippy.toml.liquid  flake.nix  flake.nix.liquid  git-z.toml  git-z.toml.liquid  memory.x  rust-toolchain.toml.liquid  shell.nix  taplo.toml  taplo.toml.liquid
.cargo/: config.toml.liquid
.github/workflows/: ci.yml.liquid  release.yml.liquid
firmware/: Cargo.toml.liquid  openocd.cfg.liquid
firmware/.cargo/: config.toml.liquid
firmware/memory/: nrf52840.x.liquid
firmware/{{project-name}}-app/: Cargo.toml.liquid
firmware/{{project-name}}-board/: Cargo.toml.liquid
firmware/{{project-name}}-fw/: Cargo.toml.liquid
scripts/: constants.rhai  license_header.rhai  lints.rhai  main.rhai  options.rhai
src/: main-bare-metal.rs  main-bare-metal.rs.liquid  main-cli.rs  main-cli.rs.liquid  main-minimal.rs  main-rtic.rs.liquid
src-bare-metal/: main.rs.liquid
src-cli/: command.rs.liquid  helpers.rs.liquid  lib.rs.liquid  main.rs.liquid  tracing.rs.liquid
src-cli/command/: hello.rs.liquid  helpers.rs.liquid
src-minimal/: main.rs.liquid
src-rtic/: main.rs.liquid
tests-cli/: hello.rs.liquid
xtask/: Cargo.toml.liquid
xtask/src/: main.rs.liquid
{{project-name}}/: Cargo.toml.liquid
{{project-name}}-helpers/: Cargo.toml.liquid
{{project-name}}-helpers/src/: lib.rs.liquid  (+1 more)
(+11 files in other folders)
